--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,2 @@
 language: objective-c
-script: xcodebuild -project Toast.xcodeproj -scheme ToastTest -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+script: xcodebuild -project ZOZolaZoomTransition.xcodeproj -scheme ZOZolaZoomTransition -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
